# Ceres

./: .eslintrc.json  .pylintrc  LICENSE  README.md  colors.json  index.html  main.py  package-lock.json  package.json  tailwind.config.cjs
electron/: index.ts  preload.ts
electron/modules/: OLDDDDDmakeFileTree.ts  copyWallpaper.ts  createWindow.ts  findFileExt.ts  getColors.ts  getFileTree.ts  makeFileTree.ts
electron/modules/ipcFunctions/: sendColors.ts
src/: App.tsx  createWindow.py  index.css  index.html  style.css  utils.py
src-tauri/: Cargo.toml  tauri.conf.json
src/Components/MainContent/: MainContent.tsx
src/Components/MainContent/Editor/: Editor.css
src/Components/MainContent/Editor/CodeEditor/: CodeEditor.css
src/Components/MainContent/StatusBar/: StatusBar.tsx
src/Components/MainContent/TopBar/TabBar/: TabBar.tsx
src/Components/MainContent/TopBar/Titlebar/: Titlebar.css  Titlebar.tsx
src/Components/MainWindow/: MainContent.tsx
src/Components/MainWindow/MainContent/: MainContent.tsx
src/Components/MainWindow/MainContent/Editor/: Editor.tsx
src/Components/MainWindow/Sidebar/: Sidebar.css  Sidebar.tsx
src/Components/Sidebar/: Sidebar.css  Sidebar.tsx
src/Components/Splash/: Splash.css  Splash.tsx
src/Components/Statusbar/: Statusbar.tsx
src/Components/Titlebar/: Titlebar.tsx
src/components/MainContent/: MainContent.tsx
src/components/MainContent/Editor/: Editor.tsx
src/components/MainContent/Sidebar/: Sidebar.css  Sidebar.tsx
src/components/Titlebar/: Titlebar.css  Titlebar.tsx
src/gui/: drawGui.py
(+13 files in other folders)
